# wizard-of-galicia-3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Wizard3D/: Makefile
Wizard3D/DOS-version/: WindowOperationsDOS.cpp
