cmake_minimum_required(VERSION 3.8)
project(wizard_of_galicia_3d)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        gles2-renderer/Camera.cpp
        gles2-renderer/Camera.h
        gles2-renderer/CLerp.cpp
        gles2-renderer/CLerp.h
        gles2-renderer/GLES2Renderer.cpp
        gles2-renderer/GLES2Renderer.h
        gles2-renderer/LoadPNG.cpp
        gles2-renderer/LoadPNG.h
        gles2-renderer/Logger.cpp
        gles2-renderer/Logger.h
        gles2-renderer/Material.cpp
        gles2-renderer/Material.h
        gles2-renderer/MaterialList.cpp
        gles2-renderer/MaterialList.h
        gles2-renderer/MeshObject.cpp
        gles2-renderer/MeshObject.h
        gles2-renderer/NativeBitmap.cpp
        gles2-renderer/NativeBitmap.h
        gles2-renderer/Scene.cpp
        gles2-renderer/Scene.h
        gles2-renderer/Trig.cpp
        gles2-renderer/Trig.h
        gles2-renderer/TrigBatch.cpp
        gles2-renderer/TrigBatch.h
        gles2-renderer/VBORenderingJob.cpp
        gles2-renderer/VBORenderingJob.h
        gles2-renderer/WavefrontMaterialReader.cpp
        gles2-renderer/WavefrontMaterialReader.h
        gles2-renderer/WavefrontOBJReader.cpp
        gles2-renderer/WavefrontOBJReader.h
        noudar-core/ncurses-version/CConsoleRenderer.cpp
        noudar-core/ncurses-version/CConsoleRenderer.h
        noudar-core/ncurses-version/main.cpp
        noudar-core/ncurses-version/TrivialConsoleRenderer.cpp
        noudar-core/noudar-core/include/commands/CCycleNextItemCommand.h
        noudar-core/noudar-core/include/commands/CCyclePreviousItemCommand.h
        noudar-core/noudar-core/include/commands/CDropItemCommand.h
        noudar-core/noudar-core/include/commands/CEndTurnCommand.h
        noudar-core/noudar-core/include/commands/CLoadNewLevelCommand.h
        noudar-core/noudar-core/include/commands/CMoveActorCommand.h
        noudar-core/noudar-core/include/commands/CNullCommand.h
        noudar-core/noudar-core/include/commands/CPickItemCommand.h
        noudar-core/noudar-core/include/commands/CQuitCommand.h
        noudar-core/noudar-core/include/commands/CTurnActorCommand.h
        noudar-core/noudar-core/include/commands/CUseCurrentItemCommand.h
        noudar-core/noudar-core/include/commands/IGameCommand.h
        noudar-core/noudar-core/include/CActor.h
        noudar-core/noudar-core/include/CCharacter.h
        noudar-core/noudar-core/include/CCharacterArchetype.h
        noudar-core/noudar-core/include/CDoorway.h
        noudar-core/noudar-core/include/CGame.h
        noudar-core/noudar-core/include/CGameDelegate.h
        noudar-core/noudar-core/include/CHuntApproach.h
        noudar-core/noudar-core/include/CItem.h
        noudar-core/noudar-core/include/CMap.h
        noudar-core/noudar-core/include/CMonster.h
        noudar-core/noudar-core/include/CMonsterGenerator.h
        noudar-core/noudar-core/include/Common.h
        noudar-core/noudar-core/include/CPlainFileLoader.h
        noudar-core/noudar-core/include/CRandomWorldGenerator.h
        noudar-core/noudar-core/include/CStorageItem.h
        noudar-core/noudar-core/include/CTeam.h
        noudar-core/noudar-core/include/IFileLoaderDelegate.h
        noudar-core/noudar-core/include/IMapElement.h
        noudar-core/noudar-core/include/IRenderer.h
        noudar-core/noudar-core/include/Vec2i.h
        noudar-core/noudar-core/src/commands/CCycleNextItemCommand.cpp
        noudar-core/noudar-core/src/commands/CCyclePreviousItemCommand.cpp
        noudar-core/noudar-core/src/commands/CDropItemCommand.cpp
        noudar-core/noudar-core/src/commands/CEndTurnCommand.cpp
        noudar-core/noudar-core/src/commands/CLoadNewLevelCommand.cpp
        noudar-core/noudar-core/src/commands/CMoveActorCommand.cpp
        noudar-core/noudar-core/src/commands/CNullCommand.cpp
        noudar-core/noudar-core/src/commands/CPickItemCommand.cpp
        noudar-core/noudar-core/src/commands/CQuitCommand.cpp
        noudar-core/noudar-core/src/commands/CTurnActorCommand.cpp
        noudar-core/noudar-core/src/commands/CUseCurrentItemCommand.cpp
        noudar-core/noudar-core/src/commands/IGameCommand.cpp
        noudar-core/noudar-core/src/CActor.cpp
        noudar-core/noudar-core/src/CCharacter.cpp
        noudar-core/noudar-core/src/CCharacterArchetype.cpp
        noudar-core/noudar-core/src/CDoorway.cpp
        noudar-core/noudar-core/src/CGame.cpp
        noudar-core/noudar-core/src/CGameDelegate.cpp
        noudar-core/noudar-core/src/CHuntApproach.cpp
        noudar-core/noudar-core/src/CItem.cpp
        noudar-core/noudar-core/src/CMap.cpp
        noudar-core/noudar-core/src/CMonster.cpp
        noudar-core/noudar-core/src/CMonsterGenerator.cpp
        noudar-core/noudar-core/src/Common.cpp
        noudar-core/noudar-core/src/CPlainFileLoader.cpp
        noudar-core/noudar-core/src/CRandomWorldGenerator.cpp
        noudar-core/noudar-core/src/CStorageItem.cpp
        noudar-core/noudar-core/src/CTeam.cpp
        noudar-core/noudar-core/src/IFileLoaderDelegate.cpp
        noudar-core/noudar-core/src/IMapElement.cpp
        noudar-core/noudar-core/src/Vec2i.cpp
        noudar-rendering/CTile3DProperties.cpp
        noudar-rendering/CTile3DProperties.h
        noudar-rendering/DungeonGL11Renderer.cpp
        noudar-rendering/DungeonGLES2Renderer.h
        noudar-rendering/ETextures.h
        noudar-rendering/GameNativeAPI.cpp
        noudar-rendering/GameNativeAPI.h
        noudar-rendering/NoudarDungeonSnapshot.cpp
        noudar-rendering/NoudarDungeonSnapshot.h
        noudar-rendering/NoudarGLES2Bridge.cpp
        noudar-rendering/NoudarGLES2Bridge.h
        noudar-rendering/RenderingJobSnapshotAdapter.cpp
        noudar-rendering/RenderingJobSnapshotAdapter.h
        noudar-rendering/SplatAnimation.cpp
        noudar-rendering/SplatAnimation.h
        noudar-rendering/VBORegister.h
        noudar-rendering/VisibilityStrategy.cpp
        noudar-rendering/VisibilityStrategy.h
        NullSoundSystem/AudioSink.h
        NullSoundSystem/SoundClip.cpp
        NullSoundSystem/SoundClip.h
        NullSoundSystem/SoundEmitter.cpp
        NullSoundSystem/SoundEmitter.h
        NullSoundSystem/SoundListener.cpp
        NullSoundSystem/SoundListener.h
        NullSoundSystem/SoundUtils.cpp
        NullSoundSystem/SoundUtils.h
        Wizard3D/DOS-version/DOSHacks.h
        Wizard3D/DOS-version/main.cpp
        Wizard3D/DOS-version/main.o
        Wizard3D/DOS-version/WindowOperations.h
        Wizard3D/DOS-version/WindowOperationsDOS.cpp
        Wizard3D/DOS-version/WindowOperationsDOS.o)

add_executable(wizard_of_galicia_3d ${SOURCE_FILES})